# giggle

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  environment.yml  flake.nix
client/: app.js  heatmapD3.js  index.html
doc/: update_doxygen.sh
docs/: app.js  index.html  smartview.html  update_doxygen.sh
examples/cistrome/: get_qc.sh  rename.py
examples/fantom/: README.md
examples/gtex/: bp.py
examples/rme/: EDACC_NAME.txt  new_groups_names.txt
examples/ucsc/: data_def.json
experiments/cache_compression/: README.html  README.md  comparison.py
experiments/cache_compression/roadmap_sort_comparisons/: index.csv  search1.csv  search2.csv  space.csv
experiments/cache_compression/roadmap_sort_comparisons/index/: fastlz1.csv  fastlz2.csv  uncompressed.csv  zlib0.csv  zlib1.csv  zlib3.csv  zlib6.csv  zlib9.csv
experiments/cache_compression/roadmap_sort_comparisons/search1/: fastlz1.csv  fastlz2.csv  uncompressed.csv  zlib0.csv  zlib1.csv  zlib3.csv  zlib6.csv  zlib9.csv
experiments/fantom/: README.md
experiments/gwas/: README.md
experiments/mc_vs_table/: README.md
experiments/metadata_index_query_filter/: README.md
experiments/metadata_index_query_filter/metadata_comparisons/: combined.csv  i1.csv  i2.csv  q1.csv  q2.csv  q3.csv  q4.csv  s1.csv  s2.csv  s3.csv  s4.csv
experiments/speed_test/: .README.md.swp  README.md  speed_test.sh
experiments/speed_test/bedtools/: bedtools_many_search.sh
experiments/speed_test/sqlite/: reg2bins.c  reg2query.c  ucsc_build.sh  ucsc_idx.c  ucsc_many_search.sh  ucsc_search.sh
experiments/speed_test/tabix/: tabix_many_search.sh  tabix_search.sh
scripts/: cross.py  get_overlaps.html  giggle_gwas_heatmap.py  giggle_heat_map.py  lines.py  scatter.py  sort_bed  volcano.py
sharding/: README.md  multi_giggle.py
src/: Makefile  api_test.c  bpt.c  bpt.h  cache.c  cache.h  data_reg.c  disk_file_header.c  disk_file_header.h  disk_store.c  disk_store.h  fastlz_wrapper.c  fastlz_wrapper.h  file_read.c  file_read.h  giggle.c  giggle.h  giggle_index.c  giggle_index.h  index.c  index.h  index_search.c  jsw_avltree.c  jsw_avltree.h  kfunc.c  kfunc.h  leaf.c  leaf.h  lists.c  lists.h  ll.c  ll.h  metadata_index.c  metadata_index.h  offset_idx_lookup.c  offset_index.c  offset_index.h  pq.c  pq.h  query_filter.c  (+15 more)
src/metadata/: Makefile  intervals.tsv  intervals2.tsv  metadata.c  metadata.conf  metadata_index.c  metadata_index.h  metadata_test.c  metadata_test1.c  metadata_test2.c  query_filter.c  query_filter.h
test/: test_cache.c
test/data/many/: 2.bed.gz.tbi  4.bed.gz.tbi  6.bed.gz.tbi  8.bed.gz.tbi
test/func/: .giggle_tests.sh.swp  giggle_tests.sh
test/unit/: Makefile  test_bpt.c  test_bulk_insert.c  test_cache.c  test_data_reg.c  test_disk_store.c  test_file_read.c  test_giggle.c  test_hash_list.c  test_index_merge.c  test_kfunc.c  test_leaf_data.c  test_lists.c  test_ll.c  test_offset_index.c  test_util.c  test_wah.c  test_zlib_wrapper.c
test/unit/unity/: unity.c
(+8 files in other folders)
